--- a/Style.css
+++ b/Style.css
@@ -9,7 +9,7 @@ body {
     font-family: "lato", sans-serif;
     min-height: 500px;
     padding-top: 60px;
-    background-image: url('bg1.png');
+    background-image: url('./images/bg1.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -24,7 +24,7 @@ body {
     box-shadow: 0px 1px 4px rgba(4, 38, 51, 0.066);
 }
 
-.header-content {
+.header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -34,20 +34,20 @@ body {
     margin: 0 auto;
 }
 
-.logo-content {
+.logo-container {
     display: flex;
     column-gap: 20px;
     align-items: center;
 }
 
-.logo {
+.site-logo {
     font-size: 20px;
     font-weight: 900;
     color: #F8527A;
     text-decoration: none;
 }
 
-.search {
+.search-bar {
     --padding: 14px;
     display: flex;
     align-items: center;
@@ -69,19 +69,19 @@ body {
 }
 
 
-.nav {
+.navigation {
     display: flex;
     column-gap: 10px;
     align-items: center;
 }
 
-.nav-list {
+.navigation-list {
     display: flex;
     column-gap: 10px;
     list-style: none;
 }
 
-.nav-item {
+.navigation-item {
     padding: 5px 6px 8px 6px;
     border-radius: 7px;
     transition: all 0.4s;
@@ -89,15 +89,15 @@ body {
 
 }
 
-.nav-link {
+.navigation-link {
     color: rgba(3, 18, 40, 0.532);
     text-decoration: none;
     font-size: 15px;
 }
 
 
-.nav-link:hover,
-.nav-link:focus {
+.navigation-link:hover,
+.navigation-link:focus {
     text-decoration: underline;
     text-decoration-thickness: 3px;
     text-underline-offset: 5px;
@@ -105,7 +105,7 @@ body {
 
 }
 
-nav>.login {
+.navigation>.login-btn {
     text-align: center;
 
     border: 2px solid rgba(51, 61, 154, 0.75);
@@ -117,19 +117,18 @@ nav>.login {
 
 }
 
-.login:hover,
-.login:focus {
+.login-btn:hover,
+.login-btn:focus {
     color: #F0F1F8;
     border: 2px solid rgba(51, 61, 154, 0.5);
     background-color: rgb(51, 62, 154);
 }
 
-.menu {
+.menu-icon {
     display: none;
 }
 
-main {
-
+#home-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -138,7 +137,7 @@ main {
     gap: 30px;
 }
 
-.hero-title {
+.hero-heading {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -146,24 +145,24 @@ main {
     gap: 10px;
 }
 
-.hero-title h1 {
+.hero-heading h1 {
     font-size: clamp(1.5rem, 2vw + 1rem, 3rem);
     letter-spacing: 10px;
     font-weight: 1000;
 }
 
-.hero-title h3 {
+.hero-heading h3 {
     letter-spacing: 3px;
     font-weight: 400;
 }
 
-.station-search {
+.station-search-form {
     display: flex;
     align-self: center;
     gap: 3px;
 }
 
-.station-search input {
+.station-input {
     outline: none;
     border: none;
     background-color: #fff;
@@ -182,14 +181,14 @@ main {
     width: 300px;
 }
 
-.station-search>div {
+.station-search-form>div {
     background-color: white;
     border-radius: 25px;
     display: flex;
 }
 
 
-.search-station {
+.station-search-button {
     height: 50px;
     display: flex;
     color: white;
@@ -203,102 +202,243 @@ main {
     width: 70px;
 }
 
+/* ---------------------------------------------------------------------------- */
 
-
-/* Modal styles */
 .modal {
+    background-image: url('./images/bg2.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+
+    width: 100%;
+    height: 100%;
+
     display: none;
+    flex-direction: column;
+
     align-items: center;
     justify-content: center;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
+
+
+}
+
+.modal-overlay {
     width: 100%;
     height: 100%;
-    background-color: #FBF3FE;
+    background-color: rgba(224, 206, 206, 0.189);
+    position: fixed;
 }
 
-.modal-content {
+.modal-container {
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    width: 60%;
+    height: 68%;
+    background-color: #ffffffde;
+    border-radius: 28px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.signin-section,
+.signup-section {
     display: flex;
-    align-content: center;
-    gap: 0px;
-    flex-direction: row;
-
-}
-
-.signin-Menu {
-    background-color: #fff;
-    border-radius: 5px;
-    width: 300px;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    gap: 40px;
 }
 
-.close {
+.signup-section {
+    display: none;
+}
+
+.signin-section,
+.signup-section {
+    padding: 50px;
+}
+
+.signup-section>div>h1 {
+    font-weight: 900;
+    font-size: 2.5rem;
+    margin-bottom: 2px;
+}
+
+.signin-section>div>h1 {
+    font-weight: 900;
+    font-size: 2.5rem;
+    margin-bottom: 5px;
+}
+
+.signup-section>div>span,
+.signin-section>div>span {
+    font-size: .8rem;
+    font-weight: 550;
+    color: #6f6c6c;
+}
+
+
+
+
+.form-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 35px;
+}
+
+.input-container>a {
+    align-self: flex-end;
+    margin-right: 20px;
+    font-size: .8rem;
+    color: #333E9A;
+    text-underline-offset: 3px;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.form-input {
+    width: 100%;
+    padding: 10px 15px;
+    border-radius: 20PX;
+    border: 1px solid #6f6c6c;
+    outline: none;
+}
+
+.signin-btn,
+.signup-btn,
+.back-btn,
+.signup-submit-btn {
+    width: 49%;
+    padding: 10px;
+    background-color: #5067CD;
+    color: white;
+    border: none;
+
+    cursor: pointer;
+    border: 1px solid #5067cd00;
+    transition: all 0.4s;
+}
+
+.signup-btn,
+.signup-submit-btn {
+    border-radius: 0px 20px 20px 0px;
+}
+
+.back-btn,
+.signin-btn {
+    border-radius: 20px 0px 0px 20px;
+}
+
+.back-btn:hover,
+.signin-btn:hover,
+.signup-btn:hover,
+.signup-submit-btn:hover {
+    background-color: white;
+    color: #5067CD;
+    border: 1px solid #5067CD;
+}
+
+.separator {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0;
+    font-size: .8rem;
+    color: #555;
+}
+
+.separator>hr {
+    width: 31%;
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 0 10px;
+}
+
+.social-signin {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.social-signin>div {
+    width: 30px;
+    height: 30px;
+}
+
+.social-signin>div>img {
+    width: 25px;
+    height: 25px;
+    transition: all 0.4s;
+}
+
+.social-signin>div>img:hover {
+    width: 30px;
+    height: 30px;
+}
+
+.modal-image-section {
+    border-radius: 0px 28px 28px 0px;
+    display: flex;
+    flex-direction: column;
+    font-weight: 400;
+    font-size: .9rem;
+    gap: 8px;
+}
+
+.modal-image-section>img {
+    padding-top: 10px;
+    margin-left: 40px;
+    width: 70%;
+}
+
+.close-btn {
     color: #aaa;
-    float: right;
+    align-self: self-end;
+    padding: 10px 20px;
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
 }
 
-.close:hover {
+.close-btn:hover {
     color: #000;
 }
 
-.login-input {
-    width: 90%;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-.login-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #333;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.login-button:hover {
-    background-color: #555;
-}
-
-.signin-Title {
-    background-image: url('login.png');
-    background-color: #fff;
-    width: 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-
-}
-
+/* ---------------------------------------------------------------------------- */
 
 
 
 @media (max-width: 815px) {
-    .header-content {
+    .header-container {
         flex-direction: column;
         padding: 25px 0;
         row-gap: 18px;
     }
 
-    .nav-link {
+    .navigation-link {
         column-gap: 20px;
     }
 
-    .menu {
+    .menu-icon {
         display: none;
     }
 }
 
 @media (max-width:530px) {
-    #nav {
+    #navigation {
         display: none;
         position: absolute;
         transform: translate(287px, 110px);
@@ -307,13 +447,13 @@ main {
         box-shadow: 0px 1px 4px rgba(4, 38, 51, 0.205);
     }
 
-    .nav-list {
+    .navigation-list {
         flex-direction: column;
     }
 
 
 
-    .menu {
+    .menu-icon {
         display: flex;
         border-radius: 50%;
         align-items: center;
@@ -323,7 +463,7 @@ main {
         width: 40px;
     }
 
-    .header-content {
+    .header-container {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -333,6 +473,4 @@ main {
         margin: 0 auto;
         row-gap: 50px;
     }
-
-    .logo {}
 }
